2003-07-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/remake4.test: Use `$MAKE distdir' instead of `$MAKE dist' to
	avoid the use of tar.

2003-07-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/gnuwarn2.test: Typo.

	* tests/insthook.test: Use $MAKE, not make.

	Fix missing rebuilds during `make dist' with BSD make.
	* automake.in (generate_makefile): Do not push Makefile.in, and
	Makefile.am into DIST_COMMON here.
	* lib/am/configure.am (DIST_COMMON): Do it here, and use
	%MAKEFILE-AM% and %MAKEFILE-IN% so that items in DIST_COMMON
	actually match the targets.   Prefix `configure' with `$(srcdir)/'
	to match the target.
	* tests/remake4.test: New file.
	* tests/Makefile.am (TESTS): Add remake4.test.
	Report from Akim Demaille.

2003-07-23  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_multilib): Register all-multi.
	(file_contents_internal): Insert \n when concatenating actions
	from "factored" rules.
	* lib/config-ml.in: New file, from GCC, including a patch
	from Ralf Corsepius (see GCC's PR 11526).
	* lib/symlink-tree.in: New file, from GCC.
	* lib/Makefile.am (dist_script_DATA): Add config-ml.in and
	symlink-tree.
	* lib/am/clean.am (distclean-generic): Do not delete Makefile here...
	(distclean, maintainer-clean): ... do it here.
	* lib/am/depend.am (distclean-depend): Likewise, replace by
	(distclean, maintainer-clean): ... these.
	* lib/am/multilib.am (all-recursive, install-recursive,
	mostlyclean-recursive, clean-recursive, distclean-recursive,
	maintainer-clean-recursive): Remove these rules.
	(mostlyclean-am, clean-am, distclean-am, maintainer-clean-am): Replace
	by ...
	(mostlyclean, clean, distclean, maintainer-clean): ... these.
	(all-am): Remove, done in handle_multilib.
	(install-am): Replace by ...
	(install-exec-am): ... this.
	* tests/Makefile.am (TESTS): Add multlib.test.
	* tests/multlib.test: New file, based on a test case by
	Ralf Corsepius

2003-07-23  Tom Tromey  <tromey@redhat.com>

	* lib/missing (autom4te): Typo.
