@@ -295,8 +295,10 @@ FETCHFILES = \
 Automake/Struct.pm \
 Automake/XFile.pm \
 INSTALL \
+config-ml.in \
 config.guess \
 config.sub \
+symlink-tree \
 texinfo.tex
 
 ## Fetch the latest versions of files we care about.
@@ -310,7 +312,9 @@ fetch:
 	$(WGET) ftp://ftp.gnu.org/gnu/texinfo/texinfo.tex; \
 	$(WGET) http://savannah.gnu.org/cgi-bin/viewcvs/~checkout~/autoconf/autoconf/lib/Autom4te/Struct.pm?content-type=text/plain -O Automake/Struct.pm; \
 	$(WGET) http://savannah.gnu.org/cgi-bin/viewcvs/~checkout~/autoconf/autoconf/lib/Autom4te/XFile.pm?content-type=text/plain -O Automake/XFile.pm; \
-	$(WGET) http://savannah.gnu.org/cgi-bin/viewcvs/~checkout~/autoconf/autoconf/INSTALL?content-type=text/plain -O INSTALL)
+	$(WGET) http://savannah.gnu.org/cgi-bin/viewcvs/~checkout~/autoconf/autoconf/INSTALL?content-type=text/plain -O INSTALL; \
+	$(WGET) http://savannah.gnu.org/cgi-bin/viewcvs/~checkout~/gcc/gcc/config-ml.in; \
+	$(WGET) http://savannah.gnu.org/cgi-bin/viewcvs/~checkout~/gcc/gcc/symlink-tree)
 	perl -pi -e 's/Autom4te::/Automake::/g' \
 	  Fetchdir/Automake/Struct.pm Fetchdir/Automake/XFile.pm
 ## Don't exit after test because we want to give as many errors as
