@@ -75,16 +75,14 @@
 
 Makefile=${ac_file-Makefile}
 ml_config_shell=${CONFIG_SHELL-/bin/sh}
-ml_arguments="${ac_configure_args}"
 ml_realsrcdir=${srcdir}
 
 # Scan all the arguments and set all the ones we need.
 
 ml_verbose=--verbose
-for option in ${ml_arguments}
+for option in ${ac_configure_args}
 do
   case $option in
-  \'--*\' ) eval option="$option" ;;
   --*) ;;
   -*) option=-$option ;;
   esac
@@ -108,7 +106,7 @@ do
 	enableopt=`echo ${option} | sed 's:^--::;s:=.*$::;s:-:_:g'`
 	eval $enableopt="$optarg"
 	;;
-  --norecursion | --no*)
+  --norecursion | --no-recursion)
 	ml_norecursion=yes
 	;;
   --silent | --sil* | --quiet | --q*)
@@ -501,7 +499,7 @@ multidirs=`echo "$multidirs" | sed -e 's/^[ ][ ]*//' -e 's/[ ][ ]*$//' -e 's/[ ]
 
 cat > Multi.tem <<\EOF
 
-PWD=$${PWDCMD-pwd}
+PWD_COMMAND=$${PWDCMD-pwd}
 
 # FIXME: There should be an @-sign in front of the `if'.
 # Leave out until this is tested a bit more.
@@ -509,8 +507,8 @@ multi-do:
 	if [ -z "$(MULTIDIRS)" ]; then \
 	  true; \
 	else \
-	  rootpre=`${PWD}`/; export rootpre; \
-	  srcrootpre=`cd $(srcdir); ${PWD}`/; export srcrootpre; \
+	  rootpre=`${PWD_COMMAND}`/; export rootpre; \
+	  srcrootpre=`cd $(srcdir); ${PWD_COMMAND}`/; export srcrootpre; \
 	  lib=`echo $${rootpre} | sed -e 's,^.*/\([^/][^/]*\)/$$,\1,'`; \
 	  compiler="$(CC)"; \
 	  for i in `$${compiler} --print-multi-lib 2>/dev/null`; do \
@@ -551,7 +549,7 @@ multi-clean:
 	if [ -z "$(MULTIDIRS)" ]; then \
 	  true; \
 	else \
-	  lib=`${PWD} | sed -e 's,^.*/\([^/][^/]*\)$$,\1,'`; \
+	  lib=`${PWD_COMMAND} | sed -e 's,^.*/\([^/][^/]*\)$$,\1,'`; \
 	  for dir in Makefile $(MULTIDIRS); do \
 	    if [ -f ../$${dir}/$${lib}/Makefile ]; then \
 	      if (cd ../$${dir}/$${lib}; $(MAKE) $(FLAGS_TO_PASS) $(DO)); \
@@ -835,7 +833,7 @@ if [ -n "${multidirs}" ] && [ -z "${ml_norecursion}" ]; then
 
     if eval ${ml_config_env} ${ml_config_shell} ${ml_recprog} \
 	--with-multisubdir=${ml_dir} --with-multisrctop=${multisrctop} \
-	${ml_arguments} ${ml_srcdiroption} ; then
+	${ac_configure_args} ${ml_srcdiroption} ; then
       true
     else
       exit 1
