@@ -1,3 +1,10 @@
+2003-07-29  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* Makefile.am (FETCHFILES, fetch): Add config-ml.in and
+	symlink-tree.
+	* lib/config.sub, lib/config-ml.in, lib/texinfo.tex: New
+	upstream versions.
+
 2003-07-25  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* tests/remake4.test: Use `$MAKE distdir' instead of `$MAKE dist' to
